[package]
name = "async-can"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
thiserror = "1"
log = "0.4"
lazy_static = "1"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
tempfile = "3.1"
tokio = {version = "1", features = ["sync", "time", "rt", "net"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mio = {version = "0.7", features = ["os-ext"]}
futures = "0.3"
interfaces = "0.0.8"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
winapi= { version = "0.3.9", features = ["synchapi"]}

[build-dependencies]
bindgen = "0.55"

