[package]
name = "async-can"
version = "0.2.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"], optional = true}
thiserror = "1"
log = "0.4"
lazy_static = "1"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
tempfile = "3.1"
tokio = {version = "1", features = ["sync", "time", "rt", "net", "macros", "io-util"]}
async-trait = "0.1.57"
byteorder = {version = "1.4", optional = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mio = {version = "0.7", features = ["os-ext"]}
futures = "0.3"
rtnetlink = "0.11"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
windows-sys = {version = "0.36", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"]}

[build-dependencies]
bindgen = "0.55"

[features]
default = ["pcan", "socket_can", "usr_canet"]
pcan = []
socket_can = []
usr_canet = ["dep:byteorder"]
serde = ["dep:serde"]
